# catchhole-backend-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish-image.yml
app/: main.py
app/analysis/: README.md  character_name_resolver.py  character_subject_resolver.py  evidence_span_resolver.py  exceptions.py  schemas.py  (+1 more)
docs/: README.md  ai-worker-workflow.md  analysis-job-workflow.md  analysis-job.md  database-schema.md  fastapi-role-review.md  global.md
samples/: character-setting-schemas.json  known-characters.json
scripts/: run_analysis_worker.py  run_episode_text_analysis_debug.py  smoke_openai_extraction.py
tests/: test_analysis_job_mapper.py  test_analysis_job_repository.py  test_analysis_job_service.py  test_analysis_job_worker.py  test_character_name_resolver.py  test_character_subject_resolver.py  test_chunk_embedding_service.py  test_chunking.py  test_db_session.py  test_embedding_client.py  test_episode_chunk_embedding_service.py  test_episode_chunk_mapper.py  test_episode_chunk_repository.py  test_episode_chunk_service.py  test_episode_chunk_vector_search_service.py  test_episode_repository.py  test_episode_source_chunking_service.py  test_evidence_span_resolver.py  test_model_schema_contract.py  test_models.py  test_openai_client.py  test_run_analysis_worker.py  test_run_episode_text_analysis_debug.py  test_s3_storage.py  test_setting_candidate_mapper.py  test_setting_candidate_repository.py  test_setting_candidate_service.py  test_setting_extractor.py  test_spring_worker_client.py
(+65 files in other folders)
