[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "catchhole-backend-ai"
version = "0.1.0"
description = "CatchHole AI analysis worker server"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pgvector>=0.5.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.setuptools.package-data]
"app.llm" = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
